# logParser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  logger.h
Programme/: CMakeLists.txt
Programme/Entry_Point/: CMakeLists.txt
Programme/Entry_Point/src/: main.cpp
Programme/Filters_Library/: CMakeLists.txt
Programme/Filters_Library/include/: CompositeFilter.h  ExcludeFilter.h  ExcludeRegexFilter.h  Filters.h  LevelFilter.h  RegexSearchFilter.h
Programme/Filters_Library/src/: CompositeFilter.cpp  ExcludeFilter.cpp  ExcludeRegexFilter.cpp  LevelFilter.cpp  RegexMatchFilter.cpp
Programme/Main_Components/: CMakeLists.txt
Programme/Main_Components/include/: CliParser.h  ILogFilter.h
documantation/: index.html
documantation/latex/: _cli_parser_8h_source.tex  _composite_filter_8h_source.tex  _exclude_filter_8h_source.tex  _exclude_regex_filter_8h_source.tex  _file_manager_8h_source.tex  _i_log_filter_8h_source.tex  _level_filter_8h_source.tex  _log_processor_8h_source.tex  _regex_match_filter_8h_source.tex  _regex_search_filter_8h_source.tex  annotated.tex  class_cli_parser.tex  class_composite_filter.eps  class_composite_filter.tex  class_composite_filter_test.eps  class_composite_filter_test.tex  class_exclude_filter.eps  class_exclude_filter.tex  class_exclude_filter_test.eps  class_exclude_filter_test.tex  class_exclude_regex_filter.eps  class_exclude_regex_filter.tex  class_exclude_regex_filter_test.eps  class_exclude_regex_filter_test.tex  class_file_manager.tex  class_i_log_filter.eps  class_i_log_filter.tex  class_level_filter.eps  class_level_filter.tex  class_level_filter_test.eps  class_level_filter_test.tex  class_log_processor.tex  class_regex_match_filter.eps  class_regex_match_filter.tex  class_regex_match_filter_test.eps  class_regex_match_filter_test.tex  class_regex_search_filter.eps  class_regex_search_filter.tex  class_regex_search_filter_test.eps  class_regex_search_filter_test.tex  (+4 more)
include/: CliParser.h  FileManager.h  ILogFilter.h  LogProcessor.h
include/Filters/: CompositeFilter.h  ExcludeFilter.h  ExcludeRegexFilter.h  LevelFilter.h  RegexMatchFilter.h  RegexSearchFilter.h
src/: CliParser.cpp  CliParser.h  FileManager.cpp  FileManager.h  ILogFilter.h  LogProcessor.cpp  LogProcessor.h  main.cpp
src/Filters/: CompositeFilter.cpp  CompositeFilter.h  ExcludeFilter.cpp  ExcludeFilter.h  ExcludeRegexFilter.cpp  ExcludeRegexFilter.h  LevelFilter.cpp  LevelFilter.h  RegexMatchFilter.cpp  RegexMatchFilter.h  RegexSearchFilter.cpp  RegexSearchFilter.h
tests/: CMakeLists.txt  test_ExcludeRegexFilter.cpp  test_LevelFilter.cpp
tests/test_Composite/: CMakeLists.txt  test_CompositeFilter.cpp
tests/test_Exclude/: CMakeLists.txt  test_ExcludeFilter.cpp
tests/test_Level/: CMakeLists.txt  test_LevelFilter.cpp
tests/test_Regex/: CMakeLists.txt  test_RegexMatchFilter.cpp  test_RegexSearchFilter.cpp
